--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24",
     "solhint": "^3.3.7",
-    "solidity-coverage": "^0.8.0"
-  },
-  "dependencies": {
+    "solidity-coverage": "^0.8.0",
     "@openzeppelin/contracts": "^4.7.3"
   }
 }
