--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
     "@aave/protocol-v2": "^1.0.1",
+    "@chainlink/contracts": "^0.4.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.3",
     "chai": "^4.3.6",
     "dotenv": "^16.0.2",
     "ethereum-waffle": "^3.4.4",
@@ -15,7 +17,6 @@
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24",
     "solhint": "^3.3.7",
-    "solidity-coverage": "^0.8.0",
-    "@openzeppelin/contracts": "^4.7.3"
+    "solidity-coverage": "^0.8.0"
   }
 }
